--- a/riffshareiii/parts/exe/plugins/actions/exp2fi/localselector.html
+++ b/riffshareiii/parts/exe/plugins/actions/exp2fi/localselector.html
@@ -1,19 +1,20 @@
 <html>
 
 <head>
-	<style>
-		html {
-			background-color: #333;
-			color: #ccc;
-		}
-	</style>
-	<script type='text/javascript' src='./exportprojectlocal.js'></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../plugins.css">
+	<script type='text/javascript' src='../../../js/mzxbx.js'></script>
 	<script type='text/javascript' src='../../../js/mzxbxlib.js'></script>
+	<script type='text/javascript' src='./exportprojectlocal.js'></script>
+	
 </head>
 
 <body>
 	<h1>Save project localy</h1>
-	<p>
+	<p class="cntrblk">
 		<button onclick="plugin.exportLocalfile();" >Save</button>
 	</p>
 </body>
