--- a/riffshareiii/parts/extensions/exportlocal/localselector.html
+++ b/riffshareiii/parts/extensions/exportlocal/localselector.html
@@ -17,6 +17,9 @@
 	<p class="cntrblk">
 		<button onclick="plugin.exportLocalfile();" >Save</button>
 	</p>
+	<p class="cntrblk">
+		<canvas  id="prvw" width=500 height=500 />
+	</p>
 </body>
 <script>
 	let plugin = new LocalExportPlugin();
