--- a/riffshareiii/parts/exe/plugins/actions/exp2fi/localselector.html
+++ b/riffshareiii/parts/exe/plugins/actions/exp2fi/localselector.html
@@ -18,7 +18,7 @@
 		<button onclick="plugin.exportLocalfile();" >Save</button>
 	</p>
 	<p class="cntrblk">
-		<canvas  id="prvw" width=500 height=500 />
+		<canvas  id="prvw" width=500 height=500 onclick="plugin.exportImage();"/>
 	</p>
 </body>
 <script>
