--- a/riffshareiii/parts/loader/loader.html
+++ b/riffshareiii/parts/loader/loader.html
@@ -1,8 +1,10 @@
 <html>
 	<head>
-		<script type='text/javascript' src='./doload.js'></script>
+		<script type='text/javascript' src='./js/mzxbxlib.js'></script>
+		<script type='text/javascript' src='./js/doload.js'></script>
 	</head>
 	<body>
 		<button onclick='startload();'>load</button>
+		<button onclick='goedit();'>go</button>
 	</body>
 </html>
