--- a/riffshareiii/parts/exe/fileslist.html
+++ b/riffshareiii/parts/exe/fileslist.html
@@ -12,71 +12,58 @@
 
 <body>
 	<div class="pagediv>">
-		<a href="#">
-			<div class="pageheader">← Архив MIDI𝄞ru</div>
+		<a href="zdbgfsgfbsbgf">
+			<div class="pageheader"><span class="homelink">🠜</span> Архив MIDI𝄞ru</div>
 		</a>
 		<div class="itemslist">
-			<a href="12c3" class="itemrow">
-				<div class="singleitem">2000-05-08 из к.ф. ''Офицеры'' - [Музыка из теле и кинофильмов] (Юрий / Рязань) </div>
-			</a>
-			<a href="1y23" class="itemrow">
-				<div class="singleitem">2002-01-11 Слезы - [Авторское - Танцевальное] (DFoma / Москва)</div>
-			</a>
-			<a href="1423" class="itemrow">
-				<div class="singleitem">2002-01-11 Тучи - [Иванушки International] (DJ SAD / <не известно>)</div>
-			</a>
-			<a href="1423" class="itemrow">
-				<div class="singleitem">2002-01-11 Ты меня не любишь - [Авторское - Танцевальное] (DFoma / Москва)</div>
-			</a>
-			<a href="123" class="itemrow">
-				<div class="singleitem">2002-01-11 Ты назови его как меня - [Руки Вверх] (Арийцы / <не известно>)</div>
-			</a>
-			<a href="1253" class="itemrow">
-				<div class="singleitem">2002-01-11 Храни ее - [Авторское - Популярное] (DFoma / Москва)</div>
-			</a>
-			<a href="1c23" class="itemrow">
-				<div class="singleitem">2002-01-11 Я забыл тебя - [Авторское - Танцевальное] (DFoma / Москва)</div>
-			</a>
-			<a href="1f2gf3" class="itemrow">
-				<div class="singleitem">2002-01-12 В солнечных лучах - [Авторское - Танцевальное] (DFoma / Москва)</div>
-			</a>
-			<a href="12c3" class="itemrow">
-				<div class="singleitem">2002-01-12 Все - [Авторское - Классика] (DFoma / Москва)</div>
-			</a>
-			<a href="find.php" class="itemrow">
-				<div class="singleitem">2002-01-12 Все для тебя - [Авторское - Популярное] (DFoma / Москва)</div>
-			</a>
-		</div>
-		<div class="navigationdiv">
-			<div class="navbuttons">
-				<div class="nobut">
-					<div class="iconumber">&lt;&lt;</div>
-					<div class="pagenumber">0</div>
-				</div>
-				<a class="linkbutton" href="1f2gf3">
-					<div class="valbut">
-						<div class="iconumber">&lt;</div>
-						<div class="pagenumber">3000</div>
-					</div>
+			<h1>Музыка</h1>
+			<div class="itemscolumn">
+				<a href="12c3" class="itemrow">
+					<div class="singleitem">из к.ф. ''Офицеры''<br /><span class="itemsmallinfo">2000-05-08, Юрий / Рязань, Музыка из теле и кинофильмов</span><br /><span class="itemsmallinfo">короткая, гитары, много ударных</span></div>
 				</a>
-				<div class="nobut">
-					<div class="iconumber">&nbsp;</div>
-					<div class="pagenumber">3001</div>
-				</div>
-				<a class="linkbutton" href="1f2gf3">
-					<div class="valbut">
-						<div class="iconumber">&gt;</div>
-						<div class="pagenumber">3002</div>
-					</div>
+				<a href="1y23" class="itemrow">
+					<div class="singleitem">Слезы<br /><span class="itemsmallinfo">2002-01-11, DFoma / Москва, Авторское - Танцевальное</span><br /><span class="itemsmallinfo">короткая, гитары, много ударных</span></div>
 				</a>
-				<a class="linkbutton" href="1f2gf3">
-					<div class="valbut">
-						<div class="iconumber">&gt;&gt;</div>
-						<div class="pagenumber">3102</div>
-					</div>
+				<a href="1423" class="itemrow">
+					<div class="singleitem">Тучи<br /><span class="itemsmallinfo">2002-01-11, DJ SAD / <не известно>, Иванушки International</span><br /><span class="itemsmallinfo">короткая, гитары, много ударных</span></div>
+				</a>
+				<a href="1423" class="itemrow">
+					<div class="singleitem">Ты меня не любишь<br /><span class="itemsmallinfo">2002-01-11, DFoma / Москва, Авторское - Танцевальное</span><br /><span class="itemsmallinfo">короткая, гитары, много ударных</span></div>
+				</a>
+				<a href="123" class="itemrow">
+					<div class="singleitem">2002-01-11 Ты назови его как меня - [Руки Вверх] (Арийцы / <не известно>)</div>
+				</a>
+				<a href="1253" class="itemrow">
+					<div class="singleitem">2002-01-11 Храни ее - [Авторское - Популярное] (DFoma / Москва)</div>
+				</a>
+				<a href="1c23" class="itemrow">
+					<div class="singleitem">2002-01-11 Я забыл тебя - [Авторское - Танцевальное] (DFoma / Москва)</div>
+				</a>
+				<a href="1f2gf3" class="itemrow">
+					<div class="singleitem">2002-01-12 В солнечных лучах - [Авторское - Танцевальное] (DFoma / Москва)</div>
+				</a>
+				<a href="12c3" class="itemrow">
+					<div class="singleitem">2002-01-12 Все - [Авторское - Классика] (DFoma / Москва)</div>
+				</a>
+				<a href="find.php" class="itemrow">
+					<div class="singleitem">2002-01-12 Все для тебя - [Авторское - Популярное] (DFoma / Москва)</div>
 				</a>
 			</div>
-
+		</div>
+		<div class="navigationdiv">
+			
+			<div class="naviline">
+				<a href="find.php"><div class="navsegment"></div></a>
+				<a href="find.php"><div class="navsegment"></div></a>
+				<div class="posisegment"></div>
+				<a href="find.php"><div class="navsegment"></div></a>
+				<a href="find.php"><div class="navsegment"></div></a>
+			</div>
+			<div class="pagenum">
+				<div class="gopage"><a href="12df">🠜</a></div>
+				<div class="curpage">3412</div>
+				<div class="gopage">🠞</div>
+			</div>
 		</div>
 	</div>
 </body>
