--- a/riffshareiii/parts/exe/vkread.html
+++ b/riffshareiii/parts/exe/vkread.html
@@ -2,28 +2,11 @@
 
 <head>
 	<meta charset="UTF-8">
-
-
-
-	<!--
 	<script type='text/javascript' src='bigexport.js'></script>
-	<script type='text/javascript' src='testapp.js'></script>
-	<script nonce="csp_nonce" src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
-	<script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
--->
 	<script type="text/javascript">
-		//https://oauth.yandex.ru/
-		//Export MIDIru
-
-		//if ('VKIDSDK' in window) {
-		//const VKID = window.VKIDSDK;
-		let access_info = null;
-
-		let ya_access_token = '';
-		let ya_upload_method = '';
-		let ya_upload_url = '';
-		let ya_operation_id = '';
-		let ya_file_name = '';
+		function dumpResultMessage(txt) {
+			console.log('error', txt);
+		}
 
 		function check_ya_token() {
 			if (window.location.hash) {
@@ -34,9 +17,9 @@
 						let namval = pars[ii].split('=');
 						if (namval[0]) {
 							if (namval[1]) {
-								console.log(ii, namval[0], namval[1]);
 								if (namval[0] == 'access_token') {
-									ya_access_token = namval[1];
+									let ya_access_token = namval[1];
+									return ya_access_token;
 								}
 							}
 						}
@@ -44,158 +27,7 @@
 					}
 				}
 			}
-			document.getElementById("ya_token_text").innerHTML = ya_access_token;
-		}
-
-		function showVK() {
-
-
-			VKID.Config.init({
-				app: 54394770,
-				redirectUrl: 'https://mzxbox.ru/minium/minium.studio.html',
-				responseMode: VKID.ConfigResponseMode.Callback,
-				source: VKID.ConfigSource.LOWCODE,
-				scope: 'docs', // Заполните нужными доступами по необходимости
-			});
-
-			const oneTap = new VKID.OneTap();
-
-			oneTap.render({
-					container: document.getElementById("vkbutton"),
-					//container: document.currentScript.parentElement,
-					showAlternativeLogin: true
-				})
-				.on(VKID.WidgetEvents.ERROR, vkidRenderError)
-				.on(VKID.OneTapInternalEvents.LOGIN_SUCCESS, vkExchange);
-		}
-
-		function vkExchange(payload) {
-			console.log('vkExchange', payload);
-			const code = payload.code;
-			const deviceId = payload.device_id;
-			VKID.Auth.exchangeCode(code, deviceId)
-				.then(vkidOnSuccess)
-				.catch(vkidOnError);
-		}
-
-		function vkidOnSuccess(data) {
-			console.log('vkidOnSuccess', data);
-			access_info = data;
-			sendFile(access_info.access_token);
-			/*
-					{
-    "refresh_token": "vk2.a.Pj8FlOXhKiG_PsdDvTIJqGJqTCZ_73kim6tX5F5Zr-5MOnOlzO7qylNBB2mshJggEsxaKr0xBZNe8PjmeAECTdKfTqPdKnyuqX_H_MwjtkxsqaKyv3r-W2Muv7qPPKdj9zPT4m40H5HScVawaa7Ze8FgX1xJg5t98due0bm8lQCWF4N7W-AzyWzdPOtN6O38Q4YCdz2nZY5nJa4szSooNKGmtXO9Drb-MmuVuJV7npA",
-    "access_token": "vk2.a.hya5KvOQIUlh98bwLyPfrga469uzDIMU1y7URiv3v7RThWrhnHuTEhSFIPqSQ5_rqGuO6jEXykPlntOul54jLDPh6W9rH1UrShz0j8c4cxUGHMjAtGQRfdF_BZgnknheNaPzPNAFp_lhSNMDHn6lq9vge2kpq2goOxjU7_pBj1DPNkpsxlbCkt1R37bzNW5QnAAjHlblaTsM-gtPPs1Y0lfOrmrADs655ZgRRpwOiAYYH755cv6CtSrHJ4_quR_b",
-    "id_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJpaXMiOiJWSyIsInN1YiI6OTU5OTQ1NDIsImFwcCI6NTQzOTQ3NzAsImV4cCI6MTc5NjU1Mzc4OSwiaWF0IjoxNzY1NDQ5Nzg5LCJqdGkiOjIxfQ.Z18zN4IFPRynm3VlkHJd-jNK5JJ9fFumMnaedNFXqIDeBiNssxUYPDjNP5qtaa6ftg8p0hXMEFoaJkY8BKROI3vr4imlmgvJar2_P4RUHRASXq_tiE6wmVfl3hJOKwD5rcLPdkIn2p4zIKZaKM30E-GkSaVfR-nbGgrKYZFuHpLbzygNZUhLxbVL8J65EFdylOoBdsSGlWUdhOyBTsCZnuh6t8K1zJ7zarSlKKeQc26RsqL2QV7qCcqCVXyWC9w-tmvscdkt0W5YAzBS4UZZAwWx_MURlTYpXON2iMq0I3TIXOfRNv4afiV_h8msg_RXbaNZliLRrDqHotMXHUOZUWkwAx4IclQpZBQiQR2PKv55udnFaxwOCG0Ud926A9wa7UzGtWkFpS_GtY8Ww68Q0rzh3jOBW4HuJxhH_thTigIXWIiWKIxQQJfm8Gi263p2A7-78uEJlCAw4cjhugU4yEsUF4YudTICGENt5kCIF435SJb6jqYCN5Kk_mcXDIOohZynctIwFBCH7Ra23uc88Oyigc9cDJP8E9VUH328uYK82HhV5PY-HqahKZ5MTxXO6fnZhLtHSWBq2X2qRuhFISiati7cJjIsWwlLjPJns9KUmKniES_n4ALr0gGhVxk-GAo0HSzkJ0hqyiKiBuipYmZA49EvrZxtgYYsND4BGzY",
-    "token_type": "Bearer",
-    "expires_in": 3600,
-    "user_id": 95994542,
-    "state": "5wwJ-IBKAi785PQw2KjmiRH_W9vfc33_X0EqzWNieI7kfJtw",
-    "scope": "vkid.personal_info"
-}
-					*/
-
-		}
-
-		function sendFile(token) {
-			let url = "";
-		}
-
-		function vkidRenderError(error) {
-			console.log('vkidRenderError', error);
-		}
-
-		function vkidOnError(error) {
-			console.log('vkidOnError', error);
-		}
-
-		function showYa() {
-			/*
-			request
-			https://passport.yandex.ru/pwl-yandex?retpath=https%3A%2F%2Foauth.yandex.ru%2Fauthorize%3Fclient_id%3Dad8bb18784e44c64a2098ad6a342e576%26response_type%3Dtoken%26redirect_uri%3Dhttps%253A%252F%252Fmzxbox.ru%252Fminium%252Fvkread.html%26process_uuid%3D23460948-2142-4f55-adbf-f08e1e2bd1b7%26widget_kind%3Ddefault%26suggest_hostname%3Dmzxbox.ru%26et%3D1765731001482&noreturn=1&origin=oauth&process_uuid=23460948-2142-4f55-adbf-f08e1e2bd1b7&cause=auth
-			
-			https://passport.yandex.ru/pwl-yandex
-			?retpath=https%3A%2F%2Foauth.yandex.ru%2Fauthorize%3Fclient_id%3Dad8bb18784e44c64a2098ad6a342e576%26response_type%3Dtoken%26redirect_uri%3Dhttps%253A%252F%252Fmzxbox.ru%252Fminium%252Fvkread.html%26process_uuid%3D23460948-2142-4f55-adbf-f08e1e2bd1b7%26widget_kind%3Ddefault%26suggest_hostname%3Dmzxbox.ru%26et%3D1765731001482
-			&noreturn=1
-			&origin=oauth
-			&process_uuid=23460948-2142-4f55-adbf-f08e1e2bd1b7
-			&cause=auth
-
-			retpath
-			https://oauth.yandex.ru/authorize?client_id=ad8bb18784e44c64a2098ad6a342e576&response_type=token&redirect_uri=https%3A%2F%2Fmzxbox.ru%2Fminium%2Fvkread.html&process_uuid=23460948-2142-4f55-adbf-f08e1e2bd1b7&widget_kind=default&suggest_hostname=mzxbox.ru&et=1765731001482
-			https://oauth.yandex.ru/authorize
-			?client_id=ad8bb18784e44c64a2098ad6a342e576
-			&response_type=token
-			&redirect_uri=https%3A%2F%2Fmzxbox.ru%2Fminium%2Fvkread.html
-			&process_uuid=23460948-2142-4f55-adbf-f08e1e2bd1b7
-			&widget_kind=default
-			&suggest_hostname=mzxbox.ru
-			&et=1765731001482
-
-			redirect_uri
-			https://mzxbox.ru/minium/vkread.html
-
-			---------------------------------result
-			https://mzxbox.ru/minium/vkread.html#access_token=y0__xDT3NeEAhjgozwgt6yF0RXJbDXR2I6xS21ekkri_kmKq3LRTg&token_type=bearer&expires_in=31296690&cid=tm7pp01u5pfdu3whrh034bchtm
-
-			https://mzxbox.ru/minium/vkread.html
-			#access_token=y0__xDT3NeEAhjgozwgt6yF0RXJbDXR2I6xS21ekkri_kmKq3LRTg
-			&token_type=bearer
-			&expires_in=31296690
-			&cid=tm7pp01u5pfdu3whrh034bchtm
-
-
-*/
-			let info = {
-				client_id: 'ad8bb18784e44c64a2098ad6a342e576',
-				response_type: 'token',
-				redirect_uri: 'https://mzxbox.ru/minium/vkread.html'
-			};
-			YaAuthSuggest.init(info, 'https://mzxbox.ru')
-				.then((yalib) => {
-					//.then(({
-					//	handler
-					//}) => {
-					console.log('YaAuthSuggest.then1 yalib', yalib);
-					yalib.handler();
-				})
-				.then((data) => {
-					console.log('YaAuthSuggest.then2', data);
-
-				})
-				.catch((error) => {
-					console.log('YaAuthSuggest.catch', error);
-				});
-		}
-		//}
-		function readYaToken() {
-			//https://oauth.yandex.ru/client/ad8bb18784e44c64a2098ad6a342e576/info
-			let redirect_uri = 'https://mzxbox.ru/minium/vkread.html';
-			let client_id = 'ad8bb18784e44c64a2098ad6a342e576';
-			let suggest_hostname = 'mzxbox.ru';
-			//let process_uuid = '0';
-			//let et = '0';
-			//let scope = 'cloud_api:disk.app_folder';
-			let retpath = 'https://oauth.yandex.ru/authorize' +
-				'?client_id=' + client_id +
-				'&response_type=token' +
-				'&redirect_uri=' + encodeURI(redirect_uri) +
-				//'&process_uuid=' + process_uuid +
-				//'&widget_kind=default' +
-				'&suggest_hostname=' + suggest_hostname;
-			//'&scope=' + scope + ''; //'&et=' + et; //1765731001482';
-			/*
-			let yapass = 'https://passport.yandex.ru/pwl-yandex' +
-				'?retpath=' + encodeURI(retpath) +
-				'&noreturn=1' +
-				'&origin=oauth' +
-				//'&process_uuid=' + process_uuid +
-				'&cause=auth';
-*/
-			//let yaurl = 'https://passport.yandex.ru/pwl-yandex/auth/add?retpath=https%3A%2F%2Foauth.yandex.ru%2Fauthorize%3Fclient_id%3Dad8bb18784e44c64a2098ad6a342e576%26response_type%3Dtoken%26redirect_uri%3Dhttps%253A%252F%252Fmzxbox.ru%252Fminium%252Fvkread.html%26process_uuid%3D0%26widget_kind%3Ddefault%26suggest_hostname%3Dmzxbox.ru%26et%3D1765731001482&noreturn=1&origin=oauth&process_uuid=23460948-2142-4f55-adbf-f08e1e2bd1b7&cause=auth';
-			//window.location.href = yapass;
-			console.log('retpath', retpath);
-			window.location.href = retpath;
+			return '';
 		}
 
 		function textcell2(num) {
@@ -212,128 +44,117 @@
 				'_' + textcell2(dd.getHours()) + '-' + textcell2(dd.getMinutes()) + '-' + textcell2(dd.getSeconds())
 		}
 
-		function readYaUploadURL() {
-			console.log('readYaUploadURL');
-			/*curl -X GET --header 'Accept: application/json' --header 'Authorization: OAuth y0__xDT3NeEAhjblgMg_5Cs1hUZYMHs-T4tALNxcO2AE0kXEOtccg' 'https://cloud-api.yandex.net/v1/disk/resources/upload?path=test123'
-			{
-			"method": "PUT",
-			"href": "https://uploader26vla.disk.yandex.net:443/upload-target/20251215T123146.169.utd.bsybedkz7rv0qdfge0a2vu6oc-k26vla.1812291",
-			"templated": false,
-			"operation_id": "355e8d841fc61f21b0ed376d58555a92fdf0b906e85dec21443980fab16b6453"
+		function sendRequest(token, url, method, json, onError, onDone) {
+			try {
+				let xmlHttpRequest = new XMLHttpRequest();
+				xmlHttpRequest.open(method, url, false);
+				xmlHttpRequest.onload = function (vProgressEvent) {
+					onDone(xmlHttpRequest, vProgressEvent);
+				};
+				xmlHttpRequest.onerror = function (vProgressEvent) {
+					console.log('onerror', vProgressEvent);
+					onError('request error');
+				};
+				if (token) {
+					xmlHttpRequest.setRequestHeader("Authorization", 'OAuth ' + token);
+				}
+				if (json) {
+					xmlHttpRequest.send(json);
+				} else {
+					xmlHttpRequest.send();
+				}
+
+			} catch (xx) {
+				console.log('sendRequest', xx, xmlHttpRequest)
+				onError('Can\'t send request');
 			}
-  */
+		}
 
-			ya_file_name = 'test123-' + datekey() + '.txt';
-			const xmlHttpRequest = new XMLHttpRequest();
-			let url = 'https://cloud-api.yandex.net/v1/disk/resources/upload?path=app:/' + ya_file_name;
-			//let url = "https://cloud-api.yandex.net/v1/disk/resources/files";
-			xmlHttpRequest.open("GET", url, false);
-			xmlHttpRequest.onload = function (vProgressEvent) {
-				console.log('onload', vProgressEvent);
+		function readYaUploadURL(ya_access_token, filename, onError, onDone) {
+			console.log('readYaUploadURL', ya_access_token, filename);
+			sendRequest(ya_access_token, 'https://cloud-api.yandex.net/v1/disk/resources/upload?path=app:/' + filename, 'GET', '', onError, (xmlHttpRequest, vProgressEvent) => {
 				try {
 					let json = JSON.parse(xmlHttpRequest.responseText);
-
-					ya_upload_method = json['method'];
-					ya_upload_url = json['href'];
-					ya_operation_id = json['operation_id'];
-					console.log('result', ya_upload_method, ya_upload_url, json);
-					document.getElementById("ya_upload_url").innerHTML = ya_upload_url;
+					let ya_upload_url = json['href'];
+					let ya_operation_id = json['operation_id'];
+					onDone(ya_upload_url, ya_operation_id);
 				} catch (xx) {
 					console.log('parse', xx)
+					onError('Can\'t parse response ' + xmlHttpRequest.responseText);
 				}
-			};
-			xmlHttpRequest.onerror = function (vProgressEvent) {
-				console.log('onerror', vProgressEvent);
-			};
-			xmlHttpRequest.setRequestHeader("Authorization", 'OAuth ' + ya_access_token);
-			xmlHttpRequest.send();
-			console.log('done', xmlHttpRequest);
+			});
 		}
 
-		function uploadYaFileData() {
-			console.log('uploadYaFileData');
-			const xmlHttpRequest = new XMLHttpRequest();
-			xmlHttpRequest.open("PUT", ya_upload_url, false);
-			xmlHttpRequest.onload = function (vProgressEvent) {
-				console.log('onload', vProgressEvent);
-				try {
-					//let json = JSON.parse(xmlHttpRequest.responseText);
-					document.getElementById("ya_upload_result").innerHTML = xmlHttpRequest.response;
-					//dumpYaOperationState();
-
-				} catch (xx) {
-					console.log('parse', xx)
-				}
-			};
-			xmlHttpRequest.onerror = function (vProgressEvent) {
-				console.log('onerror', vProgressEvent);
-			};
-			let senddata = '{"test":' + Math.random() + ',"when":"' + new Date() + '"}';
-			xmlHttpRequest.send(senddata);
-			console.log('done', xmlHttpRequest);
+		function uploadYaFileData(ya_upload_url, senddata, onError, onDone) {
+			console.log('uploadYaFileData', ya_upload_url);
+			sendRequest('', ya_upload_url, 'PUT', senddata, onError, (xmlHttpRequest, vProgressEvent) => {
+				onDone();
+			});
 		}
 
-		function dumpYaOperationState() {
-			console.log('dumpYaOperationState');
-			//https://cloud-api.yandex.net/v1/disk/operations/4e0fad9321fe04fdc2a8627e5a2a9ae8ed3dd8d5dbc62aba7350ee93f603b8d0
-			const xmlHttpRequest = new XMLHttpRequest();
-			let url = 'https://cloud-api.yandex.net/v1/disk/operations/' + ya_operation_id;
-			xmlHttpRequest.open("GET", url, false);
-			xmlHttpRequest.onload = function (vProgressEvent) {
-				console.log('onload', vProgressEvent);
-				document.getElementById("ya_upload_state").innerHTML = xmlHttpRequest.responseText;
-			};
-			xmlHttpRequest.onerror = function (vProgressEvent) {
-				console.log('onerror', vProgressEvent);
-			};
-			xmlHttpRequest.setRequestHeader("Authorization", 'OAuth ' + ya_access_token);
-			xmlHttpRequest.send();
-			console.log('done', xmlHttpRequest);
-		}
-
-		function getYaLink() {
-			console.log('getYaLink');
-			const xmlHttpRequest = new XMLHttpRequest();
-			let url = 'https://cloud-api.yandex.net/v1/disk/resources/download?path=app:/' + ya_file_name;
-			xmlHttpRequest.open("GET", url, false);
-			xmlHttpRequest.onload = function (vProgressEvent) {
-				console.log('onload', vProgressEvent);
+		function dumpYaOperationState(ya_operation_id, ya_access_token, onError, onDone) {
+			console.log('dumpYaOperationState', ya_operation_id);
+			sendRequest(ya_access_token, 'https://cloud-api.yandex.net/v1/disk/operations/' + ya_operation_id, 'GET', '', onError, (xmlHttpRequest, vProgressEvent) => {
 				try {
 					let json = JSON.parse(xmlHttpRequest.responseText);
-					console.log('json', json);
+					let status = json['status'];
+					if (status == 'success') {
+						onDone();
+					} else {
+						onError(xmlHttpRequest.responseText);
+					}
+				} catch (xx) {
+					console.log('parse', xx)
+					onError('Can\'t parse response ' + xmlHttpRequest.responseText);
+				}
+			});
+		}
+
+		function getYaLink(ya_file_name, ya_access_token, onError, onDone) {
+			console.log('getYaLink', ya_file_name);
+			sendRequest(ya_access_token, 'https://cloud-api.yandex.net/v1/disk/resources/download?path=app:/' + ya_file_name, 'GET', '', onError, (xmlHttpRequest, vProgressEvent) => {
+				try {
+					let json = JSON.parse(xmlHttpRequest.responseText);
 					let downurl = json['href'];
-					document.getElementById("ya_link_uploaded").href = downurl;
-					document.getElementById("ya_uploaded_link").innerHTML = downurl;
+					onDone(downurl);
 				} catch (xx) {
-					console.log('parse', xx)
+					onError('Can\'t parse response ' + xmlHttpRequest.responseText);
 				}
+			});
+		}
 
-			};
-			xmlHttpRequest.onerror = function (vProgressEvent) {
-				console.log('onerror', vProgressEvent);
-			};
-			xmlHttpRequest.setRequestHeader("Authorization", 'OAuth ' + ya_access_token);
-			xmlHttpRequest.send();
-			console.log('done', xmlHttpRequest);
+		function startUpload() {
+			let ya_file_name = 'MiniumStudio-' + datekey() + '.json';
+			let data = JSON.stringify(miprodata);
+			let ya_access_token = check_ya_token();
+			console.log('startUpload', ya_access_token);
+			if (ya_access_token) {
+				getLinkUpload(ya_file_name, data, ya_access_token, dumpResultMessage, (link) => {
+					//https://downloader.disk.yandex.ru/disk/877e949099119b4ab9c9535142a3f6be6d27236e77ab9c90e6ad8cd83b163311/69416437/z6kOkzFFFj_drbTBxZCz9V7hwGqG9RQATzvkKYbRTu6tVS-0yyL9hrIr1d7z0ZGrMgs98bObFM6-MRlY0J8zrw%3D%3D?uid=546696787&filename=MiniumStudio-2025.11.02_12-52-54.json&disposition=attachment&hash=&limit=0&content_type=application%2Fjson&owner_uid=546696787&fsize=71126&hid=621da899d24a2fd894d46456b154865d&media_type=unknown&tknv=v3&etag=6e762437786380fc0824065824606f26
+					console.log('download link', link);
+				});
+			} else {
+				dumpResultMessage('empty token');
+			}
+		}
+
+		function getLinkUpload(ya_file_name, filejson, ya_access_token, onError, onDone) {
+			readYaUploadURL(ya_access_token, ya_file_name, onError, (href, operation_id) => {
+				uploadYaFileData(href, filejson, onError, () => {
+					dumpYaOperationState(operation_id, ya_access_token, onError, () => {
+						getYaLink(ya_file_name, ya_access_token, onError, (linkDownload) => {
+							onDone(linkDownload);
+						});
+					});
+				});
+			});
 		}
 	</script>
 </head>
 
 <body>
-	<h1>test</h1>
-	<!--<p><button onclick="showYa();">ya start</button></p>
-	<p><a href='https://passport.yandex.ru/pwl-yandex/auth/add?retpath=https%3A%2F%2Foauth.yandex.ru%2Fauthorize%3Fclient_id%3Dad8bb18784e44c64a2098ad6a342e576%26response_type%3Dtoken%26redirect_uri%3Dhttps%253A%252F%252Fmzxbox.ru%252Fminium%252Fvkread.html%26process_uuid%3D0%26widget_kind%3Ddefault%26suggest_hostname%3Dmzxbox.ru%26et%3D1765731001482&noreturn=1&origin=oauth&process_uuid=23460948-2142-4f55-adbf-f08e1e2bd1b7&cause=auth'>ya upload</a></p>
-	<p><button onclick="showVK();">vk start</button></p>
-	<div id="vkbutton"></div>
--->
-	<p><button onclick="readYaToken();">readYaToken</button> <span id='ya_token_text'></span></p>
-	<p><button onclick="readYaUploadURL();">readYaUploadURL</button> <span id='ya_upload_url'></span></p>
-	<p><button onclick="uploadYaFileData();">uploadYaFileData</button> <span id='ya_upload_result'></span></p>
-	<p><button onclick="dumpYaOperationState();">dumpYaOperationState</button> <span id='ya_upload_state'></span></p>
-	<p><button onclick="getYaLink();">getYaLink</button> <a id='ya_link_uploaded' href="#"><span id='ya_uploaded_link'></a></p>
-	<script type="text/javascript">
-		check_ya_token();
-	</script>
+	<h1>Upload</h1>
+	<p><button onclick="startUpload();">startUpload</button></p>
 </body>
 
 </html>
