--- a/riffshareiii/parts/exe/minium.studio.html
+++ b/riffshareiii/parts/exe/minium.studio.html
@@ -136,6 +136,11 @@
 				<stop class="positionMark2" offset="98%" />
 				<stop class="positionMark3" offset="100%" />
 			</linearGradient>
+			
+			<linearGradient id="autoDotGradient">
+				<stop class="xAutoStart" offset="0%" />
+				<stop class="xAutoEnd" offset="100%" />
+			</linearGradient>
 
 			<g id='backgroundLayer' />
 			<g id='selectedTime' />
