--- a/riffshareiii/parts/exe/plugins/filters/minium.fader/ui/faderui.html
+++ b/riffshareiii/parts/exe/plugins/filters/minium.fader/ui/faderui.html
@@ -2,16 +2,17 @@
 
 <head>
 	<title>Fader UI</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script src="faderui.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../../plugins.css">
+	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
-	<h1>Fader</h1>
+	<h1 id="title">Fader</h1>
 	<p>Volume <span id='numval'>77</span>%</p>
 	<p>
 		<input type="range" id="volume" name="volume" min="0" max="150" value="77" />
