--- a/riffshareiii/parts/exe/plugins/performers/miniumpitchchord1/gui/pitchui.html
+++ b/riffshareiii/parts/exe/plugins/performers/miniumpitchchord1/gui/pitchui.html
@@ -6,11 +6,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../../plugins.css">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
-	<h1>Chord/Pitch</h1>
+	<h1 id='title'>Chord/Pitch</h1>
 	<p class="cntrblk" id='tileval'>Snare 1 / 887_sdgfbsdbgfsgbsgbsdgbsgf</p>
 	<div class="cntrblk">
 		<div class="form_radio_group">
