--- a/riffshareiii/parts/exe/plugins/actions/exp2fi/localprochooser.html
+++ b/riffshareiii/parts/exe/plugins/actions/exp2fi/localprochooser.html
@@ -3,12 +3,13 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta charset="UTF-8">
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<!--<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">-->
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../subwindow.css">
 	
-	<link rel="stylesheet" href="../../plugins.css">
+	<link rel="stylesheet" href="../../subwindow.css">
 	<script type='text/javascript' src='../../../js/mzxbx.js'></script>
 	<script type='text/javascript' src='../../../js/mzxbxlib.js'></script>
 </head>
