--- a/riffshareiii/parts/extensions/alphaTabImport/ui.html
+++ b/riffshareiii/parts/extensions/alphaTabImport/ui.html
@@ -2,10 +2,12 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../plugins.css">
+	<link rel="stylesheet" href="../../subwindow.css">
+	
 	<script type='text/javascript' src='../../../js/mzxbx.js'></script>
 	<script type='text/javascript' src='../../../js/mzxbxlib.js'></script>
 	
