--- a/riffshareiii/parts/exe/vkread.html
+++ b/riffshareiii/parts/exe/vkread.html
@@ -1,175 +1,30 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta charset="UTF-8">
-	<script type='text/javascript' src='bigexport.js'></script>
-	<script type="text/javascript">
-		function dumpResultMessage(txt) {
-			console.log('error', txt);
-		}
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./plugins/subwindow.css">
 
-		function check_ya_token() {
-			if (window.location.hash) {
-				let hash = window.location.hash.substring(1);
-				if (hash) {
-					let pars = hash.split('&');
-					for (let ii = 0; ii < pars.length; ii++) {
-						let namval = pars[ii].split('=');
-						if (namval[0]) {
-							if (namval[1]) {
-								if (namval[0] == 'access_token') {
-									let ya_access_token = namval[1];
-									return ya_access_token;
-								}
-							}
-						}
+	<script type='text/javascript' src='./js/mzxbx.js'></script>
+	<script type='text/javascript' src='./js/mzxbxlib.js'></script>
+	<script type='text/javascript' src='./js/yavkupload.js'></script>
 
-					}
-				}
-			}
-			return '';
-		}
-
-		function textcell2(num) {
-			if (num < 10) {
-				return '0' + num;
-			} else {
-				return '' + num;
-			}
-		}
-
-		function datekey() {
-			let dd = new Date();
-			return dd.getFullYear() + '.' + textcell2(dd.getMonth()) + '.' + textcell2(dd.getDay()) +
-				'_' + textcell2(dd.getHours()) + '-' + textcell2(dd.getMinutes()) + '-' + textcell2(dd.getSeconds())
-		}
-
-		function sendRequest(token, url, method, jsonOrArrayBuffer, onError, onDone) {
-			let xmlHttpRequest = new XMLHttpRequest();
-			try {
-				xmlHttpRequest.open(method, url, false);
-				xmlHttpRequest.onload = function (vProgressEvent) {
-					onDone(xmlHttpRequest, vProgressEvent);
-				};
-				xmlHttpRequest.onerror = function (vProgressEvent) {
-					console.log('onerror', vProgressEvent);
-					onError('request error');
-				};
-				if (token) {
-					xmlHttpRequest.setRequestHeader("Authorization", 'OAuth ' + token);
-				}
-				if (jsonOrArrayBuffer) {
-					xmlHttpRequest.send(jsonOrArrayBuffer);
-				} else {
-					xmlHttpRequest.send();
-				}
-
-			} catch (xx) {
-				console.log('sendRequest', xx, xmlHttpRequest)
-				onError('Can\'t send request');
-			}
-		}
-
-		function readYaUploadURL(ya_access_token, filename, onError, onDone) {
-			console.log('readYaUploadURL', ya_access_token, filename);
-			sendRequest(ya_access_token, 'https://cloud-api.yandex.net/v1/disk/resources/upload?path=app:/' + filename, 'GET', '', onError, (xmlHttpRequest, vProgressEvent) => {
-				try {
-					let json = JSON.parse(xmlHttpRequest.responseText);
-					let ya_upload_url = json['href'];
-					let ya_operation_id = json['operation_id'];
-					onDone(ya_upload_url, ya_operation_id);
-				} catch (xx) {
-					console.log('parse', xx)
-					onError('Can\'t parse response ' + xmlHttpRequest.responseText);
-				}
-			});
-		}
-
-		function uploadYaFileData(ya_upload_url, jsonOrArrayBuffer, onError, onDone) {
-			console.log('uploadYaFileData', ya_upload_url);
-			sendRequest('', ya_upload_url, 'PUT', jsonOrArrayBuffer, onError, (xmlHttpRequest, vProgressEvent) => {
-				onDone();
-			});
-		}
-
-		function dumpYaOperationState(ya_operation_id, ya_access_token, onError, onDone) {
-			console.log('dumpYaOperationState', ya_operation_id);
-			sendRequest(ya_access_token, 'https://cloud-api.yandex.net/v1/disk/operations/' + ya_operation_id, 'GET', '', onError, (xmlHttpRequest, vProgressEvent) => {
-				try {
-					let json = JSON.parse(xmlHttpRequest.responseText);
-					let status = json['status'];
-					if (status == 'success') {
-						onDone();
-					} else {
-						onError(xmlHttpRequest.responseText);
-					}
-				} catch (xx) {
-					console.log('parse', xx)
-					onError('Can\'t parse response ' + xmlHttpRequest.responseText);
-				}
-			});
-		}
-
-		function getYaLink(ya_file_name, ya_access_token, onError, onDone) {
-			console.log('getYaLink', ya_file_name);
-			sendRequest(ya_access_token, 'https://cloud-api.yandex.net/v1/disk/resources/download?path=app:/' + ya_file_name, 'GET', '', onError, (xmlHttpRequest, vProgressEvent) => {
-				try {
-					let json = JSON.parse(xmlHttpRequest.responseText);
-					let downurl = json['href'];
-					onDone(downurl);
-				} catch (xx) {
-					onError('Can\'t parse response ' + xmlHttpRequest.responseText);
-				}
-			});
-		}
-
-
-
-		function getLinkUpload(ya_file_name, jsonOrArrayBuffer, ya_access_token, onError, onDone) {
-			readYaUploadURL(ya_access_token, ya_file_name, onError, (href, operation_id) => {
-				uploadYaFileData(href, jsonOrArrayBuffer, onError, () => {
-					dumpYaOperationState(operation_id, ya_access_token, onError, () => {
-						getYaLink(ya_file_name, ya_access_token, onError, (linkDownload) => {
-							onDone(linkDownload);
-						});
-					});
-				});
-			});
-		}
-
-		function startUpload() {
-
-			let arrayBuffer = new ArrayBuffer(3);
-			var bufView = new Uint8Array(arrayBuffer);
-			bufView[0] = 1;
-			bufView[1] = 2;
-			bufView[2] = 3;
-			console.log('arrayBuffer', arrayBuffer);
-
-			let dt = datekey();
-			let ya_file_name = 'MiniumStudio-' + dt + '.json';
-			let ya_picture_name = 'MiniumStudio-' + dt + '.png';
-			let textdata = JSON.stringify(miprodata);
-			let ya_access_token = check_ya_token();
-			console.log('startUpload', ya_access_token);
-			if (ya_access_token) {
-				getLinkUpload(ya_file_name, textdata, ya_access_token, dumpResultMessage, (link) => {
-					//https://downloader.disk.yandex.ru/disk/877e949099119b4ab9c9535142a3f6be6d27236e77ab9c90e6ad8cd83b163311/69416437/z6kOkzFFFj_drbTBxZCz9V7hwGqG9RQATzvkKYbRTu6tVS-0yyL9hrIr1d7z0ZGrMgs98bObFM6-MRlY0J8zrw%3D%3D?uid=546696787&filename=MiniumStudio-2025.11.02_12-52-54.json&disposition=attachment&hash=&limit=0&content_type=application%2Fjson&owner_uid=546696787&fsize=71126&hid=621da899d24a2fd894d46456b154865d&media_type=unknown&tknv=v3&etag=6e762437786380fc0824065824606f26
-					console.log('project download link', link);
-					getLinkUpload(ya_picture_name, arrayBuffer, ya_access_token, dumpResultMessage, (link) => {
-						console.log('image download link', link);
-					});
-				});
-			} else {
-				dumpResultMessage('empty token');
-			}
-		}
-	</script>
 </head>
 
 <body>
-	<h1>Upload</h1>
-	<p><button onclick="startUpload();">startUpload</button></p>
+	<h1>Yandex / VKontakte</h1>
+	<p class="cntrblk">
+		<canvas id="prvw" width=500 height=500 onclick="startYAVKupload();" />
+	</p>
+	<p class="cntrblk">
+		<button onclick="startYAVKipload();" id='butonStart'>Отправить</button>
+	</p>
 </body>
+<script>
+	yavkInit();
+</script>
 
 </html>
